--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="app.js" type="module"></script>
-    <script src="dist/jquery.easy_number_animate.min.js"></script>
-    <script src="./jquery.smoothState.min.js"></script>
+    <script src="./dist/jquery.easy_number_animate.min.js"></script>
+    <script src="./dist/jquery.smoothState.min.js"></script>
 </body>
 </html>
