--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="left-empty">
 
             </div>
-            <div class="middle-button"><p>Try again</p></div>
+            <div class="middle-button"><p>New prompt</p></div>
             <div class="right-empty">
 
             </div>
