Added score feature

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div class="scene_element right-half-solid-bg scene_element--fadeInRight"><div class="right-half-bg"></div></div>
 
     <div class="scene_element main-container scene_element--fadeInRight">
+        <div class="score">
+            <h2>Score: <span class="scoreNum"></span></h2>
+        </div>
         
         <div class="item-container">
             <div class="left-item hvr-bob">
